Fixed bg utama overflow

--- a/Styles/media-queries.css
+++ b/Styles/media-queries.css
@@ -41,15 +41,15 @@
     #mainBlur {
         display: block;
         position: absolute;
-        overflow: hidden;
+        overflow-x: hidden;
         background: url("../Images/lawar-bali.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         filter: blur(10px);
-        width: 100%;
+        width: 92vw;
         height: 100vh;
-        z-index: -100;
+        z-index: -999;
     }
 
     #ucapan-deskripsi {
@@ -82,5 +82,10 @@
 
     button {
         font-size: 7vw;
+    }
+
+    .menu:hover {
+        scale: unset !important;
+        filter: blur(0) !important;
     }
 }
